--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#0d6efd">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#0d6efd" />
   <title>Train Schedule Tracker</title>
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Manifest -->
-  <link rel="manifest" href="manifest.json">
-  <link rel="icon" href="icon-192.png" type="image/png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
   <style>
     body {
@@ -34,7 +30,7 @@
       <div class="row g-3">
         <div class="col-md-4">
           <label class="form-label">Train Name</label>
-          <input type="text" id="trainName" class="form-control" placeholder="Enter Train Name">
+          <input type="text" id="trainName" class="form-control" placeholder="Enter Train Name" />
         </div>
         <div class="col-md-4">
           <label class="form-label">Arrival Time</label>
@@ -54,6 +50,10 @@
 
       <div class="text-center mt-4">
         <button onclick="addOrUpdateTrain()" class="btn btn-primary px-4">Add Train</button>
+      </div>
+
+      <div class="text-center mt-2">
+        <small id="timeDiffPreview" class="text-muted"></small>
       </div>
 
       <div class="table-responsive mt-4">
@@ -77,19 +77,11 @@
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Service Worker Registration -->
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('sw.js')
-        .then(() => console.log('Service Worker Registered'));
-    }
-  </script>
-
-  <!-- App Logic -->
   <script>
     let trains = JSON.parse(localStorage.getItem('trains')) || [];
     let editIndex = -1;
 
+    // Calculate time difference between arrival and departure in "X hrs Y mins"
     function calculateTimeDiff(startHour, startMin, endHour, endMin) {
       let start = startHour * 60 + startMin;
       let end = endHour * 60 + endMin;
@@ -107,8 +99,15 @@
       const departureH = parseInt(document.getElementById("departureHour").value);
       const departureM = parseInt(document.getElementById("departureMinute").value);
 
+      // Validation: all fields filled
       if (!name || isNaN(arrivalH) || isNaN(arrivalM) || isNaN(departureH) || isNaN(departureM)) {
         alert("Please fill all fields");
+        return;
+      }
+
+      // Validate minutes if hour = 24 (minutes must be 0)
+      if ((arrivalH === 24 && arrivalM !== 0) || (departureH === 24 && departureM !== 0)) {
+        alert("If hour is 24, minutes must be 00.");
         return;
       }
 
@@ -131,6 +130,7 @@
       saveData();
       clearForm();
       renderTable();
+      document.getElementById("timeDiffPreview").textContent = "";
     }
 
     function clearForm() {
@@ -174,6 +174,7 @@
       document.getElementById("departureMinute").value = dM;
 
       editIndex = index;
+      updatePreview();
     }
 
     function deleteTrain(index) {
@@ -188,31 +189,58 @@
       localStorage.setItem('trains', JSON.stringify(trains));
     }
 
-    function generateHourOptions(id) {
-      const select = document.getElementById(id);
-      for (let i = 0; i < 24; i++) {
-        const opt = document.createElement("option");
-        opt.value = i;
-        opt.text = i.toString().padStart(2, '0');
-        select.appendChild(opt);
+    // Generate dropdown options: hours 0-24, minutes 0-59
+    function generateDropdowns() {
+      const hourOptions = Array.from({ length: 25 }, (_, i) => i); // 0 to 24 inclusive
+      const minuteOptions = Array.from({ length: 60 }, (_, i) => i); // 0 to 59 every minute
+
+      ["arrivalHour", "departureHour"].forEach(id => {
+        const select = document.getElementById(id);
+        hourOptions.forEach(h => {
+          const opt = document.createElement("option");
+          opt.value = h;
+          opt.text = h.toString().padStart(2, "0");
+          select.appendChild(opt);
+        });
+      });
+
+      ["arrivalMinute", "departureMinute"].forEach(id => {
+        const select = document.getElementById(id);
+        minuteOptions.forEach(m => {
+          const opt = document.createElement("option");
+          opt.value = m;
+          opt.text = m.toString().padStart(2, "0");
+          select.appendChild(opt);
+        });
+      });
+    }
+
+    // Update preview of time difference live when user changes dropdown
+    function updatePreview() {
+      const ah = parseInt(document.getElementById("arrivalHour").value);
+      const am = parseInt(document.getElementById("arrivalMinute").value);
+      const dh = parseInt(document.getElementById("departureHour").value);
+      const dm = parseInt(document.getElementById("departureMinute").value);
+
+      if (!isNaN(ah) && !isNaN(am) && !isNaN(dh) && !isNaN(dm)) {
+        if ((ah === 24 && am !== 0) || (dh === 24 && dm !== 0)) {
+          document.getElementById("timeDiffPreview").textContent = "Invalid time: If hour is 24, minutes must be 00.";
+          return;
+        }
+        const preview = calculateTimeDiff(ah, am, dh, dm);
+        document.getElementById("timeDiffPreview").textContent = `⏱ Time Difference: ${preview}`;
+      } else {
+        document.getElementById("timeDiffPreview").textContent = "";
       }
     }
 
-    function generateMinuteOptions(id) {
-      const select = document.getElementById(id);
-      for (let i = 0; i < 60; i += 5) {
-        const opt = document.createElement("option");
-        opt.value = i;
-        opt.text = i.toString().padStart(2, '0');
-        select.appendChild(opt);
-      }
-    }
+    // Attach listeners to dropdowns to update preview
+    ["arrivalHour", "arrivalMinute", "departureHour", "departureMinute"].forEach(id => {
+      document.getElementById(id).addEventListener("change", updatePreview);
+    });
 
     document.addEventListener("DOMContentLoaded", () => {
-      generateHourOptions("arrivalHour");
-      generateHourOptions("departureHour");
-      generateMinuteOptions("arrivalMinute");
-      generateMinuteOptions("departureMinute");
+      generateDropdowns();
       renderTable();
     });
   </script>
