--- a/index.html
+++ b/index.html
@@ -262,6 +262,13 @@
     });
     });
   </script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('./service-worker.js')
+        .then(() => console.log('Service Worker Registered!'))
+        .catch(err => console.error('SW Error:', err));
+    }
+  </script>
 
 </body>
 </html>
