--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
   </script>
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('./service-worker.js')
+      navigator.serviceWorker.register('service-worker.js')
         .then(() => console.log('Service Worker Registered!'))
         .catch(err => console.error('SW Error:', err));
     }
