--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0d6efd" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <title>Train Schedule Tracker</title>
+
+  <!-- Manifest -->
+  <link rel="manifest" href="manifest.json">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
   <style>
-    body {
-      background: #f8f9fa;
-    }
-    .card {
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    }
-    .btn-action {
-      margin-right: 5px;
-    }
+    body { background: #f8f9fa; }
+    .card { box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); }
+    .btn-action { margin-right: 5px; }
   </style>
 </head>
 <body>
@@ -55,13 +54,13 @@
       <div class="text-center mt-2">
         <small id="timeDiffPreview" class="text-muted"></small>
       </div>
-      <!-- Search input -->
-    <div class="mt-4 row">
-    <div class="col-9"></div>
-    <div class="col-3">
-        <input type="text" class="form-control mb-3" id="searchTrain" placeholder="🔍 Search Train..." />
-    </div>
-    </div>
+
+      <div class="mt-4 row">
+        <div class="col-9"></div>
+        <div class="col-3">
+          <input type="text" class="form-control mb-3" id="searchTrain" placeholder="🔍 Search Train..." />
+        </div>
+      </div>
 
       <div class="table-responsive mt-4">
         <table class="table table-bordered table-hover">
@@ -81,14 +80,12 @@
     </div>
   </div>
 
-  <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
     let trains = JSON.parse(localStorage.getItem('trains')) || [];
     let editIndex = -1;
 
-    // Calculate time difference between arrival and departure in "X hrs Y mins"
     function calculateTimeDiff(startHour, startMin, endHour, endMin) {
       let start = startHour * 60 + startMin;
       let end = endHour * 60 + endMin;
@@ -106,13 +103,11 @@
       const departureH = parseInt(document.getElementById("departureHour").value);
       const departureM = parseInt(document.getElementById("departureMinute").value);
 
-      // Validation: all fields filled
       if (!name || isNaN(arrivalH) || isNaN(arrivalM) || isNaN(departureH) || isNaN(departureM)) {
         alert("Please fill all fields");
         return;
       }
 
-      // Validate minutes if hour = 24 (minutes must be 0)
       if ((arrivalH === 24 && arrivalM !== 0) || (departureH === 24 && departureM !== 0)) {
         alert("If hour is 24, minutes must be 00.");
         return;
@@ -151,7 +146,6 @@
     function renderTable() {
       const tbody = document.getElementById("trainTableBody");
       tbody.innerHTML = "";
-
       trains.forEach((train, index) => {
         tbody.innerHTML += `
           <tr>
@@ -196,10 +190,9 @@
       localStorage.setItem('trains', JSON.stringify(trains));
     }
 
-    // Generate dropdown options: hours 0-24, minutes 0-59
     function generateDropdowns() {
-      const hourOptions = Array.from({ length: 25 }, (_, i) => i); // 0 to 24 inclusive
-      const minuteOptions = Array.from({ length: 60 }, (_, i) => i); // 0 to 59 every minute
+      const hourOptions = Array.from({ length: 25 }, (_, i) => i);
+      const minuteOptions = Array.from({ length: 60 }, (_, i) => i);
 
       ["arrivalHour", "departureHour"].forEach(id => {
         const select = document.getElementById(id);
@@ -222,7 +215,6 @@
       });
     }
 
-    // Update preview of time difference live when user changes dropdown
     function updatePreview() {
       const ah = parseInt(document.getElementById("arrivalHour").value);
       const am = parseInt(document.getElementById("arrivalMinute").value);
@@ -241,7 +233,6 @@
       }
     }
 
-    // Attach listeners to dropdowns to update preview
     ["arrivalHour", "arrivalMinute", "departureHour", "departureMinute"].forEach(id => {
       document.getElementById(id).addEventListener("change", updatePreview);
     });
@@ -251,34 +242,24 @@
       renderTable();
     });
 
-
-    // Search function to filter trains by name
     document.getElementById("searchTrain").addEventListener("input", function () {
-    const keyword = this.value.toLowerCase();
-    const rows = document.querySelectorAll("#trainTableBody tr");
-    rows.forEach((row) => {
+      const keyword = this.value.toLowerCase();
+      const rows = document.querySelectorAll("#trainTableBody tr");
+      rows.forEach((row) => {
         const name = row.children[1].textContent.toLowerCase();
         row.style.display = name.includes(keyword) ? "" : "none";
-    });
+      });
     });
   </script>
+
+  <!-- Service Worker Registration -->
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
-        .then(() => console.log('Service Worker Registered!'))
-        .catch(err => console.error('SW Error:', err));
+        .then(() => console.log('✅ Service Worker Registered'))
+        .catch(err => console.error('❌ SW Registration Failed:', err));
     }
-
-  self.addEventListener('install', (event) => {
-    console.log('Service Worker Installed');
-  });
-  
-  self.addEventListener('fetch', (event) => {
-    console.log('Fetch request for:', event.request.url);
-  });
   </script>
-
-  
 
 </body>
 </html>
